# valet_rust

./: Cargo.toml  README.md
.zed/: debug.json
src/: app.rs  commands.rs  configuration.rs  core.rs  drivers.rs  lib.rs  main.rs  services.rs  setup.rs  util.rs
src/commands/: install.rs  link.rs  serve.rs  setup.rs
src/core/: app.rs  app_context.rs  command_manager.rs  command_runner.rs  configuration.rs  fs.rs
src/core/app_context/: user_provider.rs
src/drivers/: laravel.rs
src/services/: dnsmasq.rs  nginx.rs
src/setup/: caddy.rs  dns.rs  mod.rs  nginx.rs  php_fpm.rs
src/stubs/: Caddyfile  caddy.service  dnsmasq.conf  laravel-nginx.conf  nginx.conf  valex-fpm.conf
stubs/: nginx.conf
