[package]
name = "valet_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
system_env = "0.10.0"
regex = { version = "1.10", features = ["unicode"] }
uzers = "0.12.2"
